--- a/client/src/layouts/Main/components/TwitterFeed/Tweet/components/TweetTextSection/TweetTextSection.scss
+++ b/client/src/layouts/Main/components/TwitterFeed/Tweet/components/TweetTextSection/TweetTextSection.scss
@@ -33,7 +33,7 @@
 @media all and (max-width: 500px) {
     .twitter_data_section_text{
         width: 90%;
-        margin-left: 7%;
+        margin-left: 20px;
         div{
             line-break: auto;
             overflow: auto;
